[gd_scene load_steps=10 format=3 uid="uid://dygtu0wos4337"]

[ext_resource type="Theme" uid="uid://by44nnjeu6u4n" path="res://addons/cogito/Theme/Cogito_Theme_A.tres" id="1_t83el"]
[ext_resource type="Script" uid="uid://qfrtfkga2jar" path="res://addons/cogito/EasyMenus/Scripts/cogito_death_screen.gd" id="2_iaru5"]
[ext_resource type="AudioStream" uid="uid://cr3bcp0u6w1pl" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/mouseclick1.ogg" id="3_un7fm"]
[ext_resource type="AudioStream" uid="uid://kbw2s407quul" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/click1.ogg" id="4_8jkn7"]
[ext_resource type="Texture2D" uid="uid://tjkesqff2f4g" path="res://addons/cogito/Assets/Graphics/EmptySaveSlot.png" id="5_0gwvb"]
[ext_resource type="Script" uid="uid://bg6tmerhavxb3" path="res://addons/cogito/Theme/CogitoUiButton.gd" id="6_wjvf8"]
[ext_resource type="Script" uid="uid://dyiaeif1d4pmo" path="res://addons/cogito/Scripts/menu_scene_switcher.gd" id="7_rf8vv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t83el"]
bg_color = Color(0, 0, 0, 0.666667)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmpwe"]

[node name="DeathScreen" type="Panel" node_paths=PackedStringArray("nodes_to_focus")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t83el")
theme_override_styles/panel = SubResource("StyleBoxFlat_t83el")
script = ExtResource("2_iaru5")
nodes_to_focus = [NodePath("PanelContainer/Content/GameMenu/VBoxContainer/QuitButton")]
sound_hover = ExtResource("3_un7fm")
sound_click = ExtResource("4_8jkn7")
empty_slot_texture = ExtResource("5_0gwvb")

[node name="PanelContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30

[node name="Content" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="DeathScreenLabel" type="Label" parent="PanelContainer/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "LAB_you_died"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GameMenu" type="MarginContainer" parent="PanelContainer/Content"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Content/GameMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label_ActiveSlot" type="Label" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "LAB_current_slot"
horizontal_alignment = 1

[node name="PanelContainer_SlotScreenshot" type="PanelContainer" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(130, 160)
layout_mode = 2
theme = ExtResource("1_t83el")
theme_type_variation = &"HUDPanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Content/GameMenu/VBoxContainer/PanelContainer_SlotScreenshot"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Content/GameMenu/VBoxContainer/PanelContainer_SlotScreenshot/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Screenshot_Spot" type="TextureRect" parent="PanelContainer/Content/GameMenu/VBoxContainer/PanelContainer_SlotScreenshot/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_0gwvb")
expand_mode = 1
stretch_mode = 5

[node name="Label_SaveTime2" type="Label" parent="PanelContainer/Content/GameMenu/VBoxContainer/PanelContainer_SlotScreenshot/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "LAB_last_save"
horizontal_alignment = 1

[node name="Label_SaveTime" type="Label" parent="PanelContainer/Content/GameMenu/VBoxContainer/PanelContainer_SlotScreenshot/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "YYYY-MM-DD HH:MM"
horizontal_alignment = 1

[node name="HBoxContainer_LoadBtn" type="HBoxContainer" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="PanelContainer/Content/GameMenu/VBoxContainer/HBoxContainer_LoadBtn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "BTN_load"
script = ExtResource("6_wjvf8")

[node name="Separator_PanelContainer2" type="PanelContainer" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vmpwe")

[node name="BackToMenuButton" type="Button" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "BTN_back_to_menu"
script = ExtResource("6_wjvf8")

[node name="QuitButton" type="Button" parent="PanelContainer/Content/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "BTN_quit"
script = ExtResource("6_wjvf8")

[node name="MenuSceneSwitcher" type="Node" parent="."]
script = ExtResource("7_rf8vv")
main_menu_scene = "uid://c4arko3ktkygh"

[connection signal="back_to_main_pressed" from="." to="MenuSceneSwitcher" method="_on_pause_menu_back_to_main_pressed"]
[connection signal="pressed" from="PanelContainer/Content/GameMenu/VBoxContainer/HBoxContainer_LoadBtn/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PanelContainer/Content/GameMenu/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/Content/GameMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
